Make sure input labels line up on tablet/mobile

--- a/web/sass/custom.scss
+++ b/web/sass/custom.scss
@@ -63,3 +63,13 @@ a,a:hover,a:focus,a:active,a:visited {
     $color-rgba: rgba(red($brandColour), green($brandColour), blue($brandColour), .6);
     @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px $color-rgba);
 }
+
+// Make sure form field labels line up on mobile
+.text-right {
+    text-align: left;
+    
+    @media only screen and (min-width : 992px) {
+        text-align:right;
+    }
+}
+
